--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        #working-directory: ./git
+        #working-directory: ./main
 
     steps:
     # Checkout the repository to the GitHub Actions runner
