--- a/.github/workflows/TF-Destroy.yml
+++ b/.github/workflows/TF-Destroy.yml
@@ -48,7 +48,7 @@ jobs:
     
 
       # On push to main, build or change infrastructure according to Terraform configuration files
-    - name: Terraform Apply
+    - name: Terraform Destroyer
       env:
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
