--- a/.github/workflows/TF-Destroy.yml
+++ b/.github/workflows/TF-Destroy.yml
@@ -42,6 +42,7 @@ jobs:
         RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP_NAME }}
         STORAGE_ACCOUNT: ${{ secrets.STORAGE_ACCOUNT_NAME }}
         CONTAINER_NAME: ${{ secrets.STORAGE_CONTAINER_NAME }}
+        ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
       run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP"
 
 
