--- a/.github/workflows/TF-create.yml
+++ b/.github/workflows/TF-create.yml
@@ -110,3 +110,7 @@ jobs:
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       run: terraform apply -auto-approve
+
+
+    - name: Terraform output
+      run: terraform output
