--- a/.github/workflows/TF-create.yml
+++ b/.github/workflows/TF-create.yml
@@ -114,3 +114,12 @@ jobs:
 
     - name: Terraform output
       run: terraform output
+
+   
+    - name: Deploy Application
+      run: |
+        az aks get-credentials -n "cluster-bursting-jennet" -g "rg-refined-swine"
+        kubectl apply -f ./AKSApp/aks-store-quickstart.yaml
+        sleep 40
+        kubectl get service store-front
+        rm -rf ~/.kube
