--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -111,6 +111,18 @@ jobs:
       run: terraform apply -auto-approve
 
 
+    - name: Terraform output
+      run: terraform output
+
+   
+    - name: Deploy Application
+      run: |
+        az aks get-credentials -n "cluster-bursting-jennet" -g "rg-refined-swine"
+        kubectl apply -f ./AKSApp/aks-store-quickstart.yaml
+        sleep 40
+        kubectl get service store-front
+        rm -rf ~/.kube
+
       
 
 
