--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -113,8 +113,13 @@ jobs:
 
     # - name: Terraform output
     #   run: terraform output
-
-
+    - name: 'Az CLI login'
+      uses: azure/login@v1
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        #ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
 
    
     - name: Deploy Application
