--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -117,7 +117,7 @@ jobs:
       uses: azure/login@v1
       env:
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-        #ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
 
