--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -116,10 +116,10 @@ jobs:
     - name: 'Az CLI login'
       uses: azure/login@v1
       with:
-        CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        client-id: ${{ secrets.ARM_CLIENT_ID }}
        # ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-        SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        tenant-id: ${{ secrets.ARM_TENANT_ID }}
+        subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
 
    
     - name: Deploy Application
