--- a/.github/workflows/TF-create.yml
+++ b/.github/workflows/TF-create.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
-        terraform_version: 1.8.0    
+        terraform_version: "1.8.0"    
 
 
 
