--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -124,7 +124,9 @@ jobs:
       uses: azure/login@v1
       with:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
-      
+
+    - name: Login to ACR
+      run: az acr login --name DemooACRchet   
 
    
     # - name: Deploy Application
