deploying app to aks cluster

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -135,12 +135,12 @@ jobs:
         docker push demooacrchet.azurecr.io/storefront:v1
 
    
-    # - name: Deploy Application
-    #   run: |
-    #     az aks get-credentials -n "learnk8scluster" -g "AKS-ResourceGroup"
-    #     kubectl apply -f ./AKSApp/aks-store-quickstart.yaml
-    #     sleep 40
-    #     kubectl get service store-front
+    - name: Deploy Application
+      run: |
+        az aks get-credentials -n "learnk8scluster" -g "AKS-ResourceGroup"
+        kubectl apply -f ./Deployapp/fastapi-store.yaml
+        sleep 40
+        kubectl get service store-front
     #     rm -rf ~/.kube
 
 
