--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -137,7 +137,7 @@ jobs:
    
     - name: Deploy Application
       run: |
-        az aks get-credentials -n "learnk8scluster" -g "AKS-ResourceGroup"
+        az aks get-credentials -n "k8scluster" -g "AKS-ResourceGroup"
         kubectl apply -f ./Deployapp/fastapi-store.yaml
         sleep 40
         kubectl get service store-front
