--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -136,9 +136,9 @@ jobs:
 
    
     #Below code does not wotk as az login above is accomplished using service principal and service principal cannot be used for role assignment.
-    - name: Attach ACR to AKS cluster
-      run: |
-        az aks update -n "k8scluster" -g "AKS-ResourceGroup" --attach-acr "DemooACRchet"
+    # - name: Attach ACR to AKS cluster
+    #   run: |
+    #     az aks update -n "k8scluster" -g "AKS-ResourceGroup" --attach-acr "DemooACRchet"
 
 
     - name: Deploy Application
