--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -115,7 +115,7 @@ jobs:
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      run: terraform apply -auto-approve
+      run: terraform apply -auto-approve -var "tenant_id=${{ secrets.AZURE_TENANT_ID }}" -var "client_id=${{ secrets.AZURE_CLIENT_ID }}" 
 
 
     # - name: Terraform output
@@ -135,7 +135,7 @@ jobs:
         docker push demooacrchet.azurecr.io/storefront:v1
 
    
-   
+
     #Below code does not wotk as az login above is accomplished using service principal and service principal cannot be used for role assignment.
     # - name: Attach ACR to AKS cluster
     #   run: |
