--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,16 +62,16 @@ jobs:
       run: terraform validate -no-color
       continue-on-error: true
 
-    # # Run a terraform plan for pull requests only
-    # - name: Terraform Plan
-    #   id: plan
-    #   env:
-    #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-    #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-    #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-    #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-    #   #if: github.event_name == 'pull_request'
-    #   run: terraform plan -no-color
+    # Run a terraform plan for pull requests only
+    - name: Terraform Plan
+      id: plan
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      #if: github.event_name == 'pull_request'
+      run: terraform plan -no-color
     
 
     # Add a comment to pull requests with plan results
@@ -114,7 +114,7 @@ jobs:
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      run: terraform apply -auto-approve -var "tenant_id=${{ secrets.AZURE_TENANT_ID }}" -var "client_id=${{ secrets.AZURE_CLIENT_ID }}" 
+      run: terraform apply -auto-approve -var "tenant_id=${{ secrets.ARM_TENANT_ID }}" -var "object_id=${{ secrets.ARM_CLIENT_ID }}" 
 
 
     # - name: Terraform output
