--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -71,7 +71,7 @@ jobs:
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       #if: github.event_name == 'pull_request'
-      run: terraform plan -no-color
+      run: terraform plan -no-color  -var "object_id=${{ secrets.AZURE_OBJECT_ID }}"
     
 
     # Add a comment to pull requests with plan results
@@ -114,7 +114,7 @@ jobs:
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      run: terraform apply -auto-approve -no-color  -var "object_id=${{ secrets.AZURE_OBJECT_ID }}"
+      run: terraform apply -auto-approve -var "object_id=${{ secrets.AZURE_OBJECT_ID }}"
 
 
     # - name: Terraform output
