updates to keyvault
updates

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,7 +57,7 @@ jobs:
       #if: github.event_name == 'pull_request'
       run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP"
     
-    
+
     - name: Terraform Validate
       id: validate
       run: terraform validate -no-color
@@ -72,8 +72,8 @@ jobs:
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       #if: github.event_name == 'pull_request'
-      run: terraform plan -no-color  -var "object_id=${{ secrets.AZURE_OBJECT_ID }}"
-    
+      ##run: terraform plan -no-color  -var "object_id=${{ secrets.AZURE_OBJECT_ID }}"
+      run: terraform plan -no-color
 
     # Add a comment to pull requests with plan results
     - name: add-plan-comment
