--- a/Terraform-Azure/Deployapp/fastapi-store.yaml
+++ b/Terraform-Azure/Deployapp/fastapi-store.yaml
@@ -14,9 +14,22 @@ spec:
       labels:
         app: storefront
     spec:
+
+      volumes:
+      - name: secrets-store-inline
+        csi:
+          driver: secrets-store.csi.k8s.io
+          readOnly: true
+          volumeAttributes:
+            secretProviderClass: "azure-kv-secrets"
+
       containers:
         - name: storefront-container
           image: demooacrchet.azurecr.io/storefront:v1
+          volumeMounts:
+            - name: secrets-store-inline
+              mountPath: "/etc/secrets"
+              readOnly: true
           ports:
             - containerPort: 8000
           env:
