--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -137,10 +137,10 @@ jobs:
         docker push demooacrchet.azurecr.io/storefront:v1
 
 
-    #Below code does not wotk as az login above is accomplished using service principal and service principal cannot be used for role assignment.
-    - name: Attach ACR to AKS cluster
-      run: |
-        az aks update -n "k8scluster" -g "AKS-ResourceGroup" --attach-acr "DemooACRchet"
+    # #Below code does not wotk as az login above is accomplished using service principal and service principal cannot be used for role assignment.
+    # - name: Attach ACR to AKS cluster
+    #   run: |
+    #     az aks update -n "k8scluster" -g "AKS-ResourceGroup" --attach-acr "DemooACRchet"
 
     - name: Add Secrets to Key Vault
       run: |
