--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -149,22 +149,30 @@ jobs:
         az keyvault secret set --vault-name examplekeyvaultchet --name POSTGRES-PASSWORD --value ${{ secrets.DB_PASSWORD }}
         az keyvault secret set --vault-name examplekeyvaultchet --name POSTGRES-DB --value ${{ secrets.DB_NAME }}
 
-    - name: Fetch Client ID and Update YAML
+
+    - name : Debug_step
       run: |
-        # Fetch the client ID
-        CLIENT_ID=$(az aks show -n k8scluster -g AKS-ResourceGroup  --query "identityProfile.kubeletidentity.clientId" -o tsv)
+        echo "Current working directory: $(pwd)"
+        echo "Listing files in ./Deployapp/:"
+        ls -l ./Deployapp/
+        echo "Contents of fast-api-store.yml:"
+        cat ./Deployapp/fast-api-store.yml
 
-        sed -i "s/userAssignedIdentityID:.*/userAssignedIdentityID: \"$CLIENT_ID\"/" ./Deployapp/fast-api-store.yml
+    # - name: Fetch Client ID and Update YAML
+    #   run: |
+    #     # Fetch the client ID
+    #     CLIENT_ID=$(az aks show -n k8scluster -g AKS-ResourceGroup  --query "identityProfile.kubeletidentity.clientId" -o tsv)
+
+    #     sed -i "s/userAssignedIdentityID:.*/userAssignedIdentityID: \"$CLIENT_ID\"/" ./Deployapp/fast-api-store.yml
 
 
-    - name: Deploy Application
-      run: |
-        az aks get-credentials -n "k8scluster" -g "AKS-ResourceGroup"
-        kubectl apply -f ./Deployapp/fastapi-store.yaml
-        sleep 40
-        kubectl get service storefront-service
-    #     rm -rf ~/.kube
-    #run again
+    # - name: Deploy Application
+    #   run: |
+    #     az aks get-credentials -n "k8scluster" -g "AKS-ResourceGroup"
+    #     kubectl apply -f ./Deployapp/fastapi-store.yaml
+    #     sleep 40
+    #     kubectl get service storefront-service
+    
 
 
     
