--- a/Terraform-Azure/Deployapp/fastapi-store.yaml
+++ b/Terraform-Azure/Deployapp/fastapi-store.yaml
@@ -28,6 +28,9 @@ spec:
         - |
           objectName: "POSTGRES-PORT"
           objectType: secret
+       -  |
+          objectName: "devopscloud"
+          objectType: certificate
   #mountSecretsStoreObject: true
 ---  
 apiVersion: apps/v1
@@ -113,4 +116,4 @@ spec:
               number: 80
   
 
-  
+
